gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test22361.d
version https://git-lfs.github.com/spec/v1
oid sha256:2c829e38b11dc4a81b935895b2394ac35d44e6b8c85287f55ec03c40edc1b86d
size 414
